--- a/src/app/place/place.component.css
+++ b/src/app/place/place.component.css
@@ -48,3 +48,15 @@
     color: #4F4F4F;
     font-weight: bold;
 }
+
+@media (max-width: 768px){
+    .card{
+        width: 48%;
+    }    
+}
+
+@media(max-width: 576px){
+    .card{
+        width: 99%;
+    }
+}
