--- a/src/app/place/place.component.html
+++ b/src/app/place/place.component.html
@@ -2,10 +2,10 @@
     <div class="container">
         <div class="title">
             <h2>Stay in Fliland</h2>
-            <p>12 + stays</p>
+            <p>{{placeFilter ?  placeFilter.length: ''}} + stays</p>
         </div>
         <div class="card-content">
-            <div class="card" *ngFor="let item of allPlace">
+            <div class="card" *ngFor="let item of placeFilter">
                 <div class="card-header">
                     <img src={{item.photo}} alt="foto del lugar">
                 </div>
