--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -3,12 +3,13 @@ nav{
     position: absolute;
     width: 100%;
 }
-.navbar{
+.navbar{    
 }
     .navbar-header{
         display: flex;
         align-items: center;
         flex-wrap: wrap;
+        padding-top: 10px;
     }
         .navbar-img{
             flex: 13 1 auto;
@@ -67,6 +68,10 @@ nav{
 }  
 .option-select .options{
     width: 33.3%;
+    max-height: 250px;
+}
+.option-select .options:first-child{
+    overflow-y: scroll;
 }
     .location{
         display: flex;
@@ -120,4 +125,16 @@ nav{
     margin: 0%;
 }
 
+@media(max-width: 420px){
+    .navbar-header{
+        margin-top: 10px;
+        display: inline;
+    }
+    .navbar-options{
+        margin-top: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 85%;
+    }
+}
 
